pushgateway/kube/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-pushgateway
  namespace: sharedservices
  labels:
    cluster: prometheus-pushgateway
spec:
  ports:
    - name: web
      port: 9091
  selector:
    cluster: prometheus-pushgateway
