pushgateway/kube/ingress.yaml
# Ingress
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-pushgateway
  namespace: sharedservices
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus-pushgateway.demo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-pushgateway
          servicePort: 9091

#kubectl describe svc nonprod-nifi-datamastering-nodeport -n datamastering|grep Endpoints |grep 8080|awk -F ' ' '{print $2}'
#kubectl create configmap nifi-zk-config --from-literal=zk-server=devzk.demo.com:2181 -n data-engr
#http://prom-pushgateway-nodeport.data-engr:8080
